tracing/elastic-apm/elastic-apm-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentry
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: sentry
      application: sentry
  template:
    metadata:
      labels:
        name: sentry
        application: sentry
      annotations:
        checksum/configuration: ${CONF_SHA}
        prometheus.io/scrape: "true"
        prometheus.io/port: "9108"
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch-oss:${ELASTIC_VERSION}
        - name: kibana
          image: docker.elastic.co/kibana/kibana-oss:${ELASTIC_VERSION}
        - name: apm-server
          image: docker.elastic.co/apm/apm-server-oss:${ELASTIC_VERSION}
          volumeMounts:
          - name: elastic-apm-configuration
            mountPath: /usr/share/apm-server/apm-server.yml
            readOnly: true
            subPath: apm-server.yml

        - name: elasticsearch-exporter
          image: justwatch/elasticsearch_exporter:1.0.2
          args:
            - "-es.all"
            - "-es.indices"
            - "-es.uri=http://localhost:9200"

      volumes:
      - name: elastic-apm-configuration
        configMap:
          name: elastic-apm-configuration
